# ChangeLog for sys-devel/gcc
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/ChangeLog,v 1.580 2006/11/14 02:55:04 vapier Exp $

*gcc-4.1.1-r2 (14 Nov 2006)

  14 Nov 2006; Mike Frysinger <vapier@gentoo.org> +gcc-4.1.1-r2.ebuild:
  Push out accumulated fixes.

  13 Nov 2006; Tom Gall <tgall@gentoo.org> gcc-4.1.1-r1.ebuild:
  gcc 4.1.1 stable for ppc64. 

*gcc-4.2.0_alpha20061031 (02 Nov 2006)
*gcc-4.1.0_alpha20061027 (02 Nov 2006)

  02 Nov 2006; Mike Frysinger <vapier@gentoo.org>
  +gcc-4.1.0_alpha20061027.ebuild, +gcc-4.2.0_alpha20061031.ebuild:
  Update snapshots.

  02 Nov 2006; Mike Frysinger <vapier@gentoo.org>
  +files/4.1.0/gcc-4.1.0-fast-math-i386-Os-workaround.patch,
  gcc-4.1.1.ebuild, gcc-4.1.1-r1.ebuild:
  Apply a hackish workaround for uClibc/-Os until 4.1.2 is released.

  26 Oct 2006; <blubb@gentoo.org> gcc-3.3.2-r7.ebuild, gcc-3.4.1-r3.ebuild:
  remove unused emul-linux-x86 use flag

*gcc-4.2.0_alpha20061014 (22 Oct 2006)

  22 Oct 2006; Mike Frysinger <vapier@gentoo.org>
  +gcc-4.2.0_alpha20061014.ebuild:
  Version bump.

  18 Oct 2006; Roy Marples <uberlord@gentoo.org> gcc-4.1.1-r1.ebuild:
  Added ~sparc-fbsd keyword.

  19 Sep 2006; Jason Wever <weeve@gentoo.org> gcc-4.1.1.ebuild,
  gcc-4.1.1-r1.ebuild:
  Added ~sparc keywords to gcc-4.1.1 ebuilds.

  09 Sep 2006; Mike Frysinger <vapier@gentoo.org> gcc-3.4.6-r1.ebuild,
  gcc-3.4.6-r2.ebuild:
  Do not force libstdc++-v3 anymore #84961.

  06 Sep 2006; Diego Pettenò <flameeyes@gentoo.org> gcc-4.1.1-r1.ebuild:
  Re-add the ~x86-fbsd keyword, it was protoize once again.

  05 Sep 2006; Joshua Kinard <kumba@gentoo.org> ChangeLog:
  Mark gcc-4.1.1 stable on mips, with -r1 in unstable.

  05 Sep 2006; Diego Pettenò <flameeyes@gentoo.org> gcc-4.1.1-r1.ebuild:
  Remove ~x86-fbsd keyword as there are problems building.

*gcc-4.1.1-r1 (03 Sep 2006)

  03 Sep 2006; Mike Frysinger <vapier@gentoo.org> gcc-4.1.1.ebuild,