@@ -1,0 +1,3 @@
+MD5 a592bdfed5d0bf6a347be7fc65067177 gcc-4.1-20061110.tar.bz2 37156804
+RMD160 edafd5c76e96338ada5186e3db9b41a10ae9027f gcc-4.1-20061110.tar.bz2 37156804
+SHA256 1f4c4f6e598e7f96b260f30b2d376e40c552c34775b8fe5b5432105cbf679b6a gcc-4.1-20061110.tar.bz2 37156804
