@@ -1,0 +1,3 @@
+MD5 b1bb84e297759d8aefa945765be05fe3 gcc-4.2-20061107.tar.bz2 40721333
+RMD160 d2de7c84c56ebf5d637a638726b378629adb1ef2 gcc-4.2-20061107.tar.bz2 40721333
+SHA256 d31b115f458e7c38a4ffde3b5c54ba5ba370fbb1e9f83b298bc4b66e91e971f8 gcc-4.2-20061107.tar.bz2 40721333
