@@ -1,0 +1,3 @@
+MD5 4b6fe60b609ab0de916fa83793c7a654 gcc-4.3-20061111.tar.bz2 40966053
+RMD160 7565185a026625a5be5dac24c5dc2035f28a9de0 gcc-4.3-20061111.tar.bz2 40966053
+SHA256 49f922f5eabd6ce83796d5697525ceb74f28add65de41bfc1600d4ab8d2f4a95 gcc-4.3-20061111.tar.bz2 40966053
