@@ -1,6 +1,15 @@
 # ChangeLog for sys-devel/gcc
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/ChangeLog,v 1.580 2006/11/14 02:55:04 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/ChangeLog,v 1.581 2006/11/14 03:36:51 vapier Exp $
+
+*gcc-4.3.0_alpha20061111 (14 Nov 2006)
+*gcc-4.2.0_alpha20061107 (14 Nov 2006)
+*gcc-4.1.0_alpha20061110 (14 Nov 2006)
+
+  14 Nov 2006; Mike Frysinger <vapier@gentoo.org>
+  +gcc-4.1.0_alpha20061110.ebuild, +gcc-4.2.0_alpha20061107.ebuild,
+  +gcc-4.3.0_alpha20061111.ebuild:
+  Update snapshots.
 
 *gcc-4.1.1-r2 (14 Nov 2006)
 
